# Japan-Shrine-Temple-Navigator

./: .env.example  .gitignore  CLAUDE.md  FINAL_USAGE.md  README.md  TESTING.md  playwright.config.js  playwright_test_manual.py  pyproject.toml  test_data_integration.py  test_interface_validation.py
src/: Google_Map_API_Location.py  Search_Engine_Shrine.py
src/main/python/: app.py
src/main/python/api/: __init__.py  rag_api.py
src/main/python/core/: __init__.py  embeddings.py
src/main/python/models/: __init__.py  base_models.py  location_models.py  shrine_models.py  unified_models.py
src/main/python/services/: __init__.py  geofencing.py  vector_db.py
src/main/python/utils/: __init__.py  data_converter.py  geo_utils.py
src/main/resources/static/: app.js  index.html  style.css  style_modern.css
tests/: test_web_interface.py
tools/: setup_vector_db.py  start_server.py  test_rag_api.py
